--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
+    compileOptions.encoding = 'UTF-8'
     defaultConfig {
         applicationId "com.rainbow.kam.bt_scanner"
         minSdkVersion 19
