--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,17 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Bluetooth_Package.DetailGatt"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-        </activity>
         <service
             android:enabled="true"
-            android:name=".Bluetooth_Package.BluetoothService">
+            android:name=".BluetoothPackage.BluetoothService">
             <intent-filter>
-                <action android:name="com.rainbow.kam.BluetoothService" />
+                <action android:name="com.rainbow.kam.bt_scanner.BluetoothPackage.BluetoothService" />
             </intent-filter>
         </service>
     </application>
