--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,13 @@
                 <action android:name="com.rainbow.kam.bt_scanner.BluetoothPackage.BluetoothService" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".Nursing.Activity.StartNursingActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" >
+
+        </activity>
     </application>
 
 </manifest>
