--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <!--<intent-filter>-->
@@ -28,27 +28,27 @@
             <!--</intent-filter>-->
         </activity>
         <activity
-            android:name=".Activity.DetailActivity"
+            android:name=".activity.DetailActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
 
-        <service android:name=".Deprecated.BluetoothPackage.BluetoothService">
+        <service android:name=".deprecated.BluetoothPackage.BluetoothService">
             <intent-filter>
                 <action android:name="com.rainbow.kam.bt_scanner.BluetoothPackage.BluetoothService" />
             </intent-filter>
         </service>
 
         <activity
-            android:name=".Nursing.Activity.StartNursingActivity"
+            android:name=".nursing.Activity.StartNursingActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize">
 
         </activity>
         <activity
-            android:name=".Nursing.Activity.MainNursingActivity"
+            android:name=".nursing.Activity.MainNursingActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
