Nursing SplashActivity fix
[Activity]
 StartActivity -> SplashActivity
 [Before] MainNursingActivity call Start(Splash)NursingActivity
 [Now] SplashNusingActivity call MainNursingActivity
[Fragment]
 change code NursingFragment And Dialog
[XML]
 StartActivity -> SplashActivity = xml layout name/id is changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
             android:name=".activity.dev.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
 
-            <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity
             android:name=".activity.dev.DetailActivity"
@@ -42,11 +42,15 @@
         <!--</service>-->
 
         <activity
-            android:name=".activity.nurs.StartNursingActivity"
+            android:name=".activity.nurs.SplashNursingActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".activity.nurs.MainNursingActivity"
