--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.dev.MainActivity"
+            android:name=".activity.development.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -29,20 +29,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.dev.DetailActivity"
+            android:name=".activity.development.DeviceProfileActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             android:screenOrientation="portrait"
         </activity>
 
         <activity
-            android:name=".activity.nurse.SplashNursingActivity"
+            android:name=".activity.band.BandInitialActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize"/>
         <activity
-            android:name=".activity.nurse.MainNursingActivity"
+            android:name=".activity.band.BandContentActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
