--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
 
         <activity
-            android:name=".activity.prime.PrimeInitialActivity"
+            android:name=".activity.prime.PrimeSettingActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
