--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.profile.MainActivity"
-            android:label="@string/app_name"
+            android:label="DEV"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".activity.profile.DeviceProfileActivity"
@@ -33,7 +38,7 @@
 
         <activity
             android:name=".activity.prime.PrimeActivity"
-            android:label="@string/app_name"
+            android:label="PRIME"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
