--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-annotations:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:support-annotations:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:percent:23.1.1'
+    compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.realm:realm-android:0.85.0'
     compile 'com.diogobernardino:williamchart:2.1'
     compile('com.github.afollestad.material-dialogs:commons:0.8.5.0@aar') {
