--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.2'
     compileOptions.encoding = 'UTF-8'
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.rainbow.kam.bt_scanner"
         minSdkVersion 19
@@ -31,9 +37,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.2.0'
     compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.1'
-    compile 'com.trello:rxlifecycle:0.4.0'
-    compile 'com.trello:rxlifecycle-navi:0.4.0'
     compile 'io.realm:realm-android:0.87.4'
     compile 'com.diogobernardino:williamchart:2.1'
     compile('com.github.afollestad.material-dialogs:commons:0.8.5.6@aar') {
@@ -51,5 +54,6 @@ buildscript {
 
     dependencies {
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
     }
 }
