Move NursingActivity / Presenter / VC class to activity package
PrimeActivity : 삭제

mvp :
    - NursingActivity / NursingPresenter / NursingViewControl 이동

mvp /rx :
    - NursingSubscriber 이동

클래스, 패키지 네이밍을 Prime > Nursing 으로 Refactor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,20 +20,8 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".mvp.NursingActivity"
+            android:name=".activity.nursing.NursingActivity"
             android:label="Nursing"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".activity.prime.PrimeActivity"
-            android:label="PRIME"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
