--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,18 +26,30 @@ android {
     }
     productFlavors {
     }
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:support-annotations:23.2.0'
+
     compile 'com.android.support:design:23.2.0'
     compile 'com.android.support:cardview-v7:23.2.0'
     compile 'com.android.support:recyclerview-v7:23.2.0'
+
+    compile 'com.android.support:support-annotations:23.2.0'
+
+    compile 'com.google.guava:guava:19.0'
+
     compile 'io.reactivex:rxandroid:1.1.0'
+
     compile 'io.realm:realm-android:0.87.4'
+    compile 'com.jakewharton:butterknife:7.0.1'
+
     compile 'com.diogobernardino:williamchart:2.1'
     compile('com.github.afollestad.material-dialogs:commons:0.8.5.6@aar') {
         transitive = true
