Fast Commit / THIS IS NOT OFFICIAL

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,21 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
+def AAVersion = '4.0.0'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
-    compileOptions.encoding = 'UTF-8'
-
+    buildToolsVersion "23.0.3"
     compileOptions {
+        encoding = 'UTF-8'
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     defaultConfig {
         applicationId "com.rainbow.kam.bt_scanner"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -33,27 +35,31 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:support-annotations:23.3.0'
 
-    compile 'com.android.support:support-v4:23.2.0'
-    compile 'com.android.support:appcompat-v7:23.2.0'
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
 
-    compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
-
-    compile 'com.android.support:support-annotations:23.2.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 
     compile 'com.google.guava:guava:19.0'
 
     compile 'io.reactivex:rxandroid:1.1.0'
 
-    compile 'io.realm:realm-android:0.87.4'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.pwittchen:reactivebeacons:0.4.1'
+
+//    compile 'io.realm:realm-android:0.87.4'
 
     compile 'com.diogobernardino:williamchart:2.1'
     compile('com.github.afollestad.material-dialogs:commons:0.8.5.6@aar') {
         transitive = true
     }
+    compile project(':Manager')
 }
 repositories {
     maven { url "https://jitpack.io" }
@@ -65,7 +71,9 @@ buildscript {
     }
 
     dependencies {
+        classpath 'com.android.tools.build:gradle:2.0.0'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
